# Fireboy-And-Watergirl

./: CMakeLists.txt  DataRetrieval.h  GameControl.h  LevelGeneration.h  Players.h  README.md  Render.h  ResourcePath.mm  SFML_Project.sln  SFML_Project.vcxproj  Visuals.h  main.cpp  sfml-app
Debug/: SFML_Project.exe.recipe  SFML_Project.ilk  SFML_Project.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/SFML_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SFML_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/: main.cpp
assets/: scores.csv
assets/textData/: introText.txt
cmake_modules/: FindSFML.cmake
