cmake_minimum_required(VERSION 3.19)
project(Fireboy-And-Watergirl)

set(CMAKE_CXX_STANDARD 14)

add_executable(Fireboy-And-Watergirl main.cpp)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(Fireboy-And-Watergirl ${SFML_LIBRARIES})
endif()
if(WIN32)
    file(GLOB BINARY_DEP_DLLS "${SFML_INCLUDE_DIR}/../bin/*.dll")
    file(COPY ${BINARY_DEP_DLLS} DESTINATION ${CMAKE_BINARY_DIR})
endif()